added ability to play custom asset file, must be included in pugin

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ flutter:
         package: com.GidSchwifty.sound_player
         pluginClass: SoundPlayerPlugin
 
+
+  assets:
+    - assets/ringtones/
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
